# Semaforo_Multitarefa_Embarcatech

./: CMakeLists.txt  README.md  diagram.json  main.c  main.c.c
lib/Display_Bibliotecas/: font.h  ssd1306.c  ssd1306.h
lib/Matriz_Bibliotecas/: matriz_led.c  matriz_led.h
